k8s/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mlops-app
  labels:
    project: heart-disease-mlops
---
apiVersion: v1
kind: Namespace
metadata:
  name: mlops-tracking
  labels:
    project: heart-disease-mlops
---
apiVersion: v1
kind: Namespace
metadata:
  name: mlops-monitoring
  labels:
    project: heart-disease-mlops
