k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: heart-disease-api
  namespace: mlops-app
  labels:
    app: heart-disease-api
spec:
  type: LoadBalancer
  selector:
    app: heart-disease-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
